--- a/app/src/main/res/layout/content_addnote.xml
+++ b/app/src/main/res/layout/content_addnote.xml
@@ -9,15 +9,13 @@
         android:id="@+id/note_content"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="?attr/actionBarSize"
         android:background="@android:color/transparent"
-        android:gravity="top|left"
+        android:focusable="true"
+        android:gravity="top|start"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:focusable="true" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
