--- a/app/src/main/res/layout/note_view_holder.xml
+++ b/app/src/main/res/layout/note_view_holder.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:cardCornerRadius="4dp">
+    android:layout_height="60dp"
+    android:orientation="vertical"
+    android:gravity="center|start">
 
     <TextView
         android:id="@+id/text_view_note"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
-        android:maxLines="1"
-        android:textColor="@android:color/black" />
+        android:maxLines="2"
+        android:textStyle="bold"
+        android:textSize="22sp" />
 
-</androidx.cardview.widget.CardView>
+</LinearLayout>
