--- a/app/src/main/res/layout/note_view_holder.xml
+++ b/app/src/main/res/layout/note_view_holder.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:background="@drawable/riple"
     android:padding="8dp">
 
     <TextView
@@ -34,4 +35,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true" />
+
 </RelativeLayout>
