Fixed bug with deleting notes

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,6 +14,8 @@
         android:layout_height="match_parent"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
+        android:clipToPadding="false"
+        android:paddingBottom="86dp"
         tools:listitem="@layout/note_view_holder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
